--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     networks:
       - lbs.net
     links:
-      # - mysql.commande:dbcom
+      - mysql.commande:dbcom
       - api.catalogue:api.catalogue.local
 
 #
@@ -57,7 +57,62 @@ services:
       - lbs.net
     links:
       - mongo.cat:dbcat
-    # - mysql.catalogue:dbcat
+      - mysql.catalogue:dbcat
+
+#
+# Services de gestion des données
+#
+
+#
+# Base de données des commandes, utilisée par le service de prise
+# de commandes
+#
+  mysql.commande:
+    image: 'mariadb:latest'
+    command: '--default-authentication-plugin=mysql_native_password --character-set-server=utf8 --collation-server=utf8_general_ci'
+    environment:
+      - MYSQL_ROOT_PASSWORD=comroot
+      - MYSQL_USER=command_lbs
+      - MYSQL_PASSWORD=command_lbs
+      - MYSQL_DATABASE=command_lbs
+    ports:
+      - '3307:3306'
+    networks:
+      - lbs.net
+    volumes:
+      - './lbs_command_service/sql:/var/sql'
+
+#
+# Base de données du catalogue, utilisée par le service catalogue
+#
+  mysql.catalogue:
+    image: 'mariadb:latest'
+    command: '--default-authentication-plugin=mysql_native_password --character-set-server=utf8 --collation-server=utf8_general_ci'
+    environment:
+      - MYSQL_ROOT_PASSWORD=catroot
+      - MYSQL_USER=cat_lbs
+      - MYSQL_PASSWORD=cat_lbs
+      - MYSQL_DATABASE=cat_lbs
+    ports:
+      - '3309:3306'
+    networks:
+      - lbs.net
+    volumes:
+      - './lbs_catalogue_service/sql:/var/sql'
+
+#
+# adminer, pour la gestion des bases sql
+# peut être remplacé par phpmydamin
+#
+  adminer:
+    image: adminer
+    ports:
+      - 8080:8080
+    networks:
+      - lbs.net
+    links:
+      - mysql.commande:command
+      - mysql.catalogue:catalogue
 
 #
 # mongo service, pour un catalogue mongo
@@ -80,58 +135,3 @@ services:
       - 8081:8081
     links:
       - mongo.cat:mongo
-
-#
-# Services de gestion des données
-#
-
-#
-# Base de données des commandes, utilisée par le service de prise
-# de commandes
-#
-  # mysql.commande:
-  #   image: 'mariadb:latest'
-  #   command: '--default-authentication-plugin=mysql_native_password --character-set-server=utf8 --collation-server=utf8_general_ci'
-  #   environment:
-  #     - MYSQL_ROOT_PASSWORD=comroot
-  #     - MYSQL_USER=command_lbs
-  #     - MYSQL_PASSWORD=command_lbs
-  #     - MYSQL_DATABASE=command_lbs
-  #   ports:
-  #     - '3307:3306'
-  #   networks:
-  #     - lbs.net
-  #   volumes:
-  #     - './lbs_command_service/sql:/var/sql'
-
-#
-# Base de données du catalogue, utilisée par le service catalogue
-#
-  # mysql.catalogue:
-  #   image: 'mariadb:latest'
-  #   command: '--default-authentication-plugin=mysql_native_password --character-set-server=utf8 --collation-server=utf8_general_ci'
-  #   environment:
-  #     - MYSQL_ROOT_PASSWORD=catroot
-  #     - MYSQL_USER=cat_lbs
-  #     - MYSQL_PASSWORD=cat_lbs
-  #     - MYSQL_DATABASE=cat_lbs
-  #   ports:
-  #     - '3309:3306'
-  #   networks:
-  #     - lbs.net
-  #   volumes:
-  #     - './lbs_catalogue_service/sql:/var/sql'
-
-#
-# adminer, pour la gestion des bases sql
-# peut être remplacé par phpmydamin
-#
-  # adminer:
-  #   image: adminer
-  #   ports:
-  #     - 8080:8080
-  #   networks:
-  #     - lbs.net
-  #   links:
-  #     - mysql.commande:command
-  #     - mysql.catalogue:catalogue
