--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,9 +57,9 @@ services:
       - lbs.net
     links:
       - mongo.cat:dbcat
-      - mysql.catalogue:dbcat
+#      - mysql.catalogue:dbcat
 
-#
+
 # Services de gestion des données
 #
 
@@ -80,25 +80,25 @@ services:
     networks:
       - lbs.net
     volumes:
-      - './lbs_command_service/sql:/var/sql'
+      - './lbs_commande_service/sql:/var/sql'
 
 #
 # Base de données du catalogue, utilisée par le service catalogue
 #
-  mysql.catalogue:
-    image: 'mariadb:latest'
-    command: '--default-authentication-plugin=mysql_native_password --character-set-server=utf8 --collation-server=utf8_general_ci'
-    environment:
-      - MYSQL_ROOT_PASSWORD=catroot
-      - MYSQL_USER=cat_lbs
-      - MYSQL_PASSWORD=cat_lbs
-      - MYSQL_DATABASE=cat_lbs
-    ports:
-      - '3309:3306'
-    networks:
-      - lbs.net
-    volumes:
-      - './lbs_catalogue_service/sql:/var/sql'
+#  mysql.catalogue:
+#    image: 'mariadb:latest'
+#    command: '--default-authentication-plugin=mysql_native_password --character-set-server=utf8 --collation-server=utf8_general_ci'
+#    environment:
+#      - MYSQL_ROOT_PASSWORD=catroot
+#      - MYSQL_USER=cat_lbs
+#      - MYSQL_PASSWORD=cat_lbs
+#      - MYSQL_DATABASE=cat_lbs
+#    ports:
+#      - '3309:3306'
+#    networks:
+#      - lbs.net
+#    volumes:
+#      - './lbs_catalogue_service/sql:/var/sql'
 
 #
 # adminer, pour la gestion des bases sql
@@ -112,7 +112,7 @@ services:
       - lbs.net
     links:
       - mysql.commande:command
-      - mysql.catalogue:catalogue
+#      - mysql.catalogue:catalogue
 
 #
 # mongo service, pour un catalogue mongo
