--- a/lbs_commande_service/src/composer.json
+++ b/lbs_commande_service/src/composer.json
@@ -4,7 +4,8 @@
     "php": ">=7.3",
     "slim/slim": "^3.0",
     "illuminate/database":"^8.0",
-    "monolog/monolog": "^2.1"
+    "monolog/monolog": "^2.1",
+    "ramsey/uuid": "^4.1"
   },
   "autoload": {
     "psr-4" : {
