--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,28 @@ services:
       - mongo.cat:dbcat
 #      - mysql.catalogue:dbcat
 
+  #
+  # API de fidélisation
+  # disponible sur l'url https://api.fidelisation.local:19243
+  #
+  api.fidelisation:
+    image: canals/php:latest
+    environment:
+      - VHOST_HOSTNAME=api.fidelisation.local
+      - VHOST_DOCROOT=/var/www/api
+    ports:
+      - 19280:80
+      - 19243:443
+    volumes:
+      - ./lbs_fidelisation_service/api:/var/www/api
+      - ./lbs_fidelisation_service/src:/var/www/src
+    working_dir: /var/www/src
+    networks:
+      - lbs.net
+    links:
+  #    - mongo.cat:dbcat
+      - mysql.fidelisation:dbfid
+
 
 # Services de gestion des données
 #
@@ -81,6 +103,25 @@ services:
       - lbs.net
     volumes:
       - './lbs_commande_service/sql:/var/sql'
+
+
+  #
+  # Base de données de fidelisation
+  #
+  mysql.fidelisation:
+    image: 'mariadb:latest'
+    command: '--default-authentication-plugin=mysql_native_password --character-set-server=utf8 --collation-server=utf8_general_ci'
+    environment:
+      - MYSQL_ROOT_PASSWORD=fidroot
+      - MYSQL_USER=fidelisation_lbs
+      - MYSQL_PASSWORD=fidelisation_lbs
+      - MYSQL_DATABASE=fidelisation_lbs
+    ports:
+      - '3308:3306'
+    networks:
+      - lbs.net
+    volumes:
+      - './lbs_fidelisation_service/sql:/var/sql'
 
 #
 # Base de données du catalogue, utilisée par le service catalogue
@@ -112,6 +153,7 @@ services:
       - lbs.net
     links:
       - mysql.commande:command
+      - mysql.fidelisation:fidelisation
 #      - mysql.catalogue:catalogue
 
 #
