--- a/lbs_commande_service/src/composer.json
+++ b/lbs_commande_service/src/composer.json
@@ -5,7 +5,8 @@
     "slim/slim": "^3.0",
     "illuminate/database":"^8.0",
     "monolog/monolog": "^2.1",
-    "ramsey/uuid": "^4.1"
+    "ramsey/uuid": "^4.1",
+    "davidepastore/slim-validation": "^0.5.1"
   },
   "autoload": {
     "psr-4" : {
