--- a/lbs_commande_service/src/composer.json
+++ b/lbs_commande_service/src/composer.json
@@ -6,7 +6,9 @@
     "illuminate/database":"^8.0",
     "monolog/monolog": "^2.1",
     "ramsey/uuid": "^4.1",
-    "davidepastore/slim-validation": "^0.5.1"
+    "davidepastore/slim-validation": "^0.5.1",
+    "firebase/php-jwt": "^5.2",
+    "guzzlehttp/guzzle": "^7.2"
   },
   "autoload": {
     "psr-4" : {
